@@ -57,6 +57,8 @@ test.wps application/vnd.ms-works ox
 internet.ez application/andrew-inset ox
 # Copied from http://extensions.services.openoffice.org/project/anaphraseus
 Anaphraseus-1.21-beta.oxt application/vnd.openofficeorg.extension ox
+# Copied from http://lilypond.org/doc/v2.10/examples
+petite-ouverture-a-danser.ly text/x-lilypond ox
 
 # Playlist, subtitle and audio formats
 stream.nsc application/x-netshow-channel
